--- a/style.css
+++ b/style.css
@@ -15,14 +15,7 @@ body .links:hover {
     color: #000000;
 }
 
-.grupo {
-    width: 80%;
-    margin: 0 auto;
-}
 
-.grupo h3 {
-    margin: 20x;
-}
 
 .bottons {
     width: 35%;
@@ -69,6 +62,16 @@ main .container a:hover {
 
 /* Tela de Grupos */
 
+.grupo {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.grupo h3 {
+    text-align: center;
+    margin: 20x;
+    color: white;
+}
 
 .container .botao {
     display: flex;
@@ -86,10 +89,15 @@ table {
 
 /* Tabela de Produtos */
 
+.tabela-precos {
+    max-width: 80%;
+    margin: 0 auto;
+}
+
 .cadastro_produtos {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    max-width: 80%;
+    max-width: 90%;
     padding: 10px;
     margin: 0 auto;
     border: 2px solid blueviolet;
@@ -147,11 +155,11 @@ table {
 
 /*Secao principal
 apagar depois*/
-#editar_produto {
+/* #editar_produto {
     margin: 0 auto;
     background-color: #000000;
     max-height: 90vh;
-}
+} */
 
 .texto_editar_produto {
     display: flex;
@@ -176,12 +184,36 @@ apagar depois*/
     color: white;
 }
 
+/* Div esquerda*/
+.salvar_alter {
+    background-image: url("./imgs/logo.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 10px;
+    border: 1px solid rgb(192, 18, 18);
+
+}
+
+/*botão dentro da div esquerda*/
+.button {
+    display: flex;
+    justify-content: center;
+}
+
+.button button {
+    width: 90%;
+    font-size: 20px;
+    font-weight: bold;
+}
 
 /*Div direita*/
 .alter_itens {
     border: 1px solid darkblue;
     gap: 10px;
-    
+
 }
 
 /* campos da tabela para alterar*/
@@ -190,25 +222,5 @@ apagar depois*/
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 10px;
-
-}
-
-/* Div esquerda*/
-.salvar_alter {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    gap: 10px;
-    border: 1px solid white;
-    
-}
-
-/*botão dentro da div esquerda*/
-.salvar_alter button {
-    color: white;
-    border: none;
-    border-radius: 5px;
-    font-size: 20px;
-    font-weight: bold;
 
 }
